test/applied_to_none.ref
Error: File "applied_to_none.cppo", line 3, characters 0-3
Error: "FOO" expects 1 arguments but is applied to none.
