test/applied_to_none.cppo
(* A parameterized macro is applied to no arguments. *)
#define FOO(x) x
FOO + 1
